Fixed the fucking problem that if text in listing gets too big the listing gets cut off.

--- a/src/main/webapp/resources/css/standard.css
+++ b/src/main/webapp/resources/css/standard.css
@@ -38,7 +38,7 @@ a:visited {
     margin-left: auto; /* fix max-width incompatibility in IE6 */
     width: expression(document.body.clientWidth > 1024 ? "1024px" : "auto");
     overflow: hidden;
-    display: block;
+    display: table;
 }
 
 .menu {
